--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "scripts": {
-    "start": "snowpack dev",
+    "start": "node server/serve.mjs",
+    "start:dev": "snowpack dev",
     "build": "snowpack build",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1"
   },
   "devDependencies": {
     "@types/gl-matrix": "^3.2.0",
     "prettier": "^2.2.1",
-    "snowpack": "^3.0.1",
-    "snowpack-plugin-glslify": "^1.0.0",
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "gl-matrix": "^3.3.0"
+    "gl-matrix": "^3.3.0",
+    "serve": "^11.3.2",
+    "snowpack": "^3.0.1",
+    "snowpack-plugin-glslify": "^1.0.0"
   }
 }
